--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <dl class="overview">
     <dt>投票受付期間</dt>
     <dd>2013/5/31 21:00頃 ～ 2013/6/3 0:00</dd>
-    <dt>ハッシュタグ</dd>
+    <dt>ハッシュタグ</dt>
     <dd>#幻水総選挙</dd>
     <dt>総投票数</dt>
     <dd>1987票</dd>
