--- a/index.html
+++ b/index.html
@@ -475,17 +475,6 @@
 </footer>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/list.js/2.3.1/list.min.js"></script>
-<script src="assets/js/tablesort.js"></script>
-<script>
-  const btn = document.getElementById("pagetop");
-
-btn.addEventListener("click", () => {
-  window.scroll({
-    top: 0,
-    behavior: "smooth",
-  });
-});
-
-</script>
+<script src="assets/js/result.js"></script>
 </body>
 </html>
