meta周りのURLをdevから本番へ修正、一部CSSのミス修正

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>集計結果｜【非公式】幻水総選挙2013</title>
 <meta property="og:locale" content="ja_JP" />
-<meta property="og:url" content="https://suikoden-election-2013.pages.dev/" />
+<meta property="og:url" content="https://election-2013.suikoden.info/" />
 <meta property="og:type" content="website" />
 <meta property="og:title" content="集計結果｜【非公式】幻水総選挙2013" />
 <meta property="og:description" content="幻水総選挙2013は、「幻想水滸伝シリーズ」のファン・有志による非公式の投票イベントです。既存の企業様、関係者様等とは一切関係ありません。" />
 <meta property="og:site_name" content="【非公式】幻水総選挙2013" />
-<meta property="og:image" content="https://suikoden-election-2013.pages.dev/assets/img/ogp.png" />
+<meta property="og:image" content="https://election-2013.suikoden.info/assets/img/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@gensosenkyo" />
 <meta name="twitter:title" content="集計結果｜【非公式】幻水総選挙2013" />
