順位・キャラクター名・その他軽微な修正

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>集計結果｜【非公式】幻水総選挙2013</title>
+<title>【非公式】幻水総選挙2013</title>
 <meta property="og:locale" content="ja_JP" />
 <meta property="og:url" content="https://election-2013.suikoden.info/" />
 <meta property="og:type" content="website" />
-<meta property="og:title" content="集計結果｜【非公式】幻水総選挙2013" />
+<meta property="og:title" content="【非公式】幻水総選挙2013" />
 <meta property="og:description" content="幻水総選挙2013は、「幻想水滸伝シリーズ」のファン・有志による非公式の投票イベントです。既存の企業様、関係者様等とは一切関係ありません。" />
 <meta property="og:site_name" content="【非公式】幻水総選挙2013" />
 <meta property="og:image" content="https://election-2013.suikoden.info/assets/img/ogp.png" />
 <meta name="twitter:card" content="summary_large_image" />
 <meta name="twitter:site" content="@gensosenkyo" />
-<meta name="twitter:title" content="集計結果｜【非公式】幻水総選挙2013" />
+<meta name="twitter:title" content="【非公式】幻水総選挙2013" />
 <meta name="twitter:description" content="幻水総選挙2013は、「幻想水滸伝シリーズ」のファン・有志による非公式の投票イベントです。既存の企業様、関係者様等とは一切関係ありません。" />
 <link rel="icon" href="assets/img/favicon-32x32.png" sizes="32x32" />
 <link rel="icon" href="assets/img/favicon-192x192.png" sizes="192x192" />
@@ -28,11 +28,11 @@
 </head>
 <body id="top">
 <header class="header">
-  <div class="header__sitename">【非公式】幻水総選挙2013</div>
+  <h1 class="header__sitename">幻水総選挙2013</h1>
 </header>
 
 <main class="main">
-  <h1>集計結果</h1>
+  <h2>集計結果</h2>
   <dl class="overview">
     <dt>投票受付期間</dt>
     <dd>2013/5/31 21:00頃 ～ 2013/6/3 0:00</dd>
@@ -178,10 +178,10 @@
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">アイン・ジード</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">アトリ</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">アルシュタート・ファレナス</td></tr>
-          <tr><td class="rank">32</td><td class="votes">3</td><td class="character">ウィンドウ</td></tr>
+          <tr><td class="rank">32</td><td class="votes">3</td><td class="character">ウインドウ</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">オウラン</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">コーネル</td></tr>
-          <tr><td class="rank">32</td><td class="votes">3</td><td class="character">サイリアーズ</td></tr>
+          <tr><td class="rank">32</td><td class="votes">3</td><td class="character">サイアリーズ</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">ジーン</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">シャムス</td></tr>
           <tr><td class="rank">32</td><td class="votes">3</td><td class="character">シャロン</td></tr>
@@ -278,6 +278,7 @@
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">リィナ</td></tr>
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">リキマル</td></tr>
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">リタ</td></tr>
+          <tr><td class="rank">33</td><td class="votes">2</td><td class="character">リュキア</td></tr>
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">ルオ・タウ</td></tr>
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">レーヴン</td></tr>
           <tr><td class="rank">33</td><td class="votes">2</td><td class="character">レオン・シルバーバーグ</td></tr>
@@ -325,7 +326,7 @@
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">グントラム</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ケイト</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ゲン</td></tr>
-          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">コウュウ</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">コウユウ</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">コルネリオ</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">コロク</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">サーヴィラ</td></tr>
@@ -426,10 +427,8 @@
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リーリン</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リールン</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リイン・ペンネンバーグ</td></tr>
-          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リキュア</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リドリー</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リュウカン</td></tr>
-          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">リュキア</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ルイーズ</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ルイス・キファーソン</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ルバイス</td></tr>
@@ -457,13 +456,25 @@
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ヘカトンケイル</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">フリードー家</td></tr>
           <tr><td class="rank">34</td><td class="votes">1</td><td class="character">マクシミリアンズ</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">「豚は死ね！」で殺されたおんなのひと</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">メルテス卿</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">もさもさ</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">えれべーたー</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ジョー軍曹の尻</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">スノウの腕</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">ソウルイーター</td></tr>
+          <tr><td class="rank">34</td><td class="votes">1</td><td class="character">瞬きの手鏡</td></tr>
         </tbody>
       </table>
     </div>
-    <p>
+    <p class="text">
       ※集計漏れ等もしありましたらすみません。<br>
       ※外伝ナッシュと3ナッシュ、少年フッチと青年フッチのように複数作品に登場するキャラの区別はしていません。<br>
       ※同じキャラへの複数投票は一票として数えさせて頂きました。
+    </p>
+    <p class="text">
+      （2026.01.xx 追記）<br>
+      ※順位の修正を行ないました。<br>「リキュア」→「リュキア」の誤字修正に伴い、「リュキア」を34位（1票）→33位（2票）に修正しました。
     </p>
   </section>
 </main>
